# may_must_rs

./: .gitignore  AGENTS.md  ALIAS_ANALYSIS.md  CLAUDE.md  Cargo.toml  LICENSE  LOOPS.md  Loop_search_and_use.md  MEMORY_MODEL.md  README.md  REFERENCES.md  REPRODUCER.md  REP{RODUCER.md  Rearch.md  Reproducer.md  TASKVIEW.md  TODO.md  build.rs  llvm_reader.rs  loop_redesign.md  make_graph.cpp  state_model.md  verification.h
.cargo/: config.toml
.github/workflows/: benchmarks.yml  build.yml  rust.yml  tests.yml
benchmarks/sv-comp/: .gitignore  README.md  RESULTS.md  bench.sh  categories.txt  (+5 more)
bug_summaries/: inductiveness-check-loop-guard.md  vacuous-loop-invariant-initiation.md
debug/: array-2-false-safe.md
design_docs/: AI-rearch  ANALYSIS_FLOW.md  BACKWARD.md  DART.md  FORWARD_DART.md  INTERPROCEDURAL.md  LOOPS.md
design_notes/: BMC.md  LOOPS.md  QUERY_REFACTOR.md  SMASH_FORWARD_MUST.md
notes/: inductiveness-assume-wp-semantics.md  llm-guided-verification.md  reading-list.md  separation-logic-checker-exploration.md
src/: analysis.rs  analysis2.rs  errors.rs  expressions.rs  llvm_utils.rs  llvm_wrap.rs  main.rs  main.rs_bak  main_api.rs  smt.rs
tests/: Makefile  README.md  array-1.c  array-2.c  array_init.c  array_max_callee.c  array_max_offset.c  array_program.c  build_ir.sh  compact_small.c  example.ll  fibonacci_pointers.c  global_int.c  heap_distinct.c  indirect_branch_example.c  kw_fn.c  local_assert.h  nested_loops.c  paper_section2_fig1_not_may.c  sample.c  short_assert.c  smash_must.c  smash_smoke.sh  smt_assert_branch_prune.c  smt_assert_safe.c  smt_smoke.sh  struct_fields.c  vtable_dispatch.cpp
(+145 files in other folders)
