[package]
name = "llvm_reader"
version = "0.1.0"
edition = "2021"

[dependencies]
llvm-sys = "201"
libc = "0.2"
env_logger = "0.11"
log = "0.4"
clap = {version = "4.5", features =["cargo"]}
thiserror = "2.0.16"
dot = "0.1.4"
chumsky = {features = ["pratt"], version = "0.11"}
ariadne = "0.5.1"


[[bin]]
name = "var_reader"
path = "name_tester.rs"

[[bin]]
name = "llvm_try"
path = "src/main_api.rs"
