[package]
name = "llvm_reader"
version = "0.15.0"
edition = "2021"

[dependencies]
llvm-sys = "201"
libc = "0.2"
env_logger = "0.11"
log = "0.4"
clap = {version = "4.5", features =["cargo"]}
thiserror = "2.0.16"
dot = "0.1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync"] }
rayon = "1"
z3 = "0"
z3-sys = "0"


#[[bin]]
#name = "var_reader"
#path = "name_tester.rs"

[[bin]]
name = "main"
path = "src/main.rs"
